# Janus

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
include/: stb_image.h
include/glad/: glad.h
model/: GltfAnimationChannel.cpp  GltfAnimationChannel.h  GltfAnimationClip.cpp  GltfAnimationClip.h  GltfModel.cpp  GltfModel.h  GltfNode.cpp  GltfNode.h  IKSolver.cpp  IKSolver.h  Model.cpp  Model.h
opengl/: Framebuffer.cpp  Framebuffer.h  OGLRenderData.h  OGLRenderer.cpp  OGLRenderer.h  Shader.cpp  Shader.h  ShaderStorageBuffer.h  SharedStorageBuffer.cpp  SharedStorageBuffer.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  UserInterface.cpp  UserInterface.h  VertexBuffer.cpp  VertexBuffer.h
shader/: basic.frag  basic.vert  changed.frag  changed.vert  gltf.vert  gltf_gpu.vert  gltf_gpu_dquats.frag  gltf_gpu_dquats.vert
src/: glad.c
tools/: Camera.cpp  Camera.h  Logger.cpp  Logger.h  Timer.cpp  Timer.h
window/: Window.cpp  Window.h
